--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.83.0",
     "@tensorflow/tfjs": "^4.22.0",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
