--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
